[metadata]
name = topic_extraction
version = 0.1.0
description = Topic Extraction for Danish, Swedish, Norwegian and English
url = https://github.com/carinhopm/topic-extraction

[options]
install_requires =
    click==7.0
    langdetect~=1.0.9
    nltk~=3.6.5
    numpy~=1.20.3
    pandas~=1.3.4
    scikit-learn~=0.24.2
    sklearn~=0.0
    spacy~=3.2.0
    stanza~=1.3.0
    spacy-stanza~=1.0.1
    torch~=1.10.0
    tqdm~=4.62.3
    transformers~=4.12.3
    en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz
    da_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/da_core_news_sm-3.2.0/da_core_news_sm-3.2.0.tar.gz
    nb_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/nb_core_news_sm-3.2.0/nb_core_news_sm-3.2.0.tar.gz
